# Advance-C-

./: CMakeLists.txt  README.md
Task1/: CMakeLists.txt
Task1/example/: CMakeLists.txt  parent.cpp
Task1/lib/: Descriptor.hpp  Exceptions.hpp  Process.hpp
Task1/src/: Descriptor.cpp  Exceptions.cpp  Process.cpp
Task2/: CMakeLists.txt
Task2/example/: CMakeLists.txt  test_logger.cpp
Task2/lib/: Logger.hpp  log.hpp
Task2/src/: Logger.cpp  log.cpp
Task3/: CMakeLists.txt
Task3/example/: CMakeLists.txt  client.cpp  server.cpp
Task3/lib/: Connection.hpp  Descriptor.hpp  Exceptions.hpp  Server.hpp  Socket.hpp
Task3/src/: Connection.cpp  Descriptor.cpp  Server.cpp  Socket.cpp
Task4/: CMakeLists.txt
Task4/example/: CMakeLists.txt  client.cpp
Task4/include/: Exceptions.hpp  SemLock.hpp  Semaphore.hpp  ShAlloc.hpp  SharedMap.hpp
Task4/lib/: Exceptions.hpp  SemLock.hpp  Semaphore.hpp  ShAlloc.hpp  SharedMap.hpp
Task4/src/: SemLock.cpp  Semaphore.cpp
Task5/: CMakeLists.txt  epoll.cpp
Task5/Task3/example/: client.cpp
Task5/Task3/src/: Server.cpp
Task5/include/: BufConnection.hpp  EPoll.hpp  Events.hpp  Exceptions.hpp  IServiceListener.hpp  Service.hpp  net.hpp
Task5/src/: BufConnection.cpp  EPoll.cpp  Service.cpp
Task5/tcp/: CMakeLists.txt
Task5/tcp/example/: client.cpp  server.cpp
Task5/tcp/lib/: Descriptor.hpp  tcp.hpp
Task5/tcp/src/: Connection.cpp  Descriptor.cpp  Server.cpp
Task5/tests/: CMakeLists.txt  client.cpp  test_service.cpp
descriptor/: CMakeLists.txt
descriptor/include/: Descriptor.hpp
descriptor/src/: CMakeLists.txt  Descriptor.cpp
exceptions/: CMakeLists.txt
exceptions/include/: Exceptions.hpp
log/: CMakeLists.txt
log/example/: CMakeLists.txt  test_logger.cpp
log/include/: Logger.hpp  log.hpp
log/src/: CMakeLists.txt  Logger.cpp  log.cpp
net/: CMakeLists.txt
net/example/: CMakeLists.txt  client.cpp  test_service.cpp
net/include/: BufConnection.hpp  EPoll.hpp  Events.hpp  IServiceListener.hpp  Service.hpp  net.hpp
net/src/: BufConnection.cpp  CMakeLists.txt  EPoll.cpp  Service.cpp
proc/: CMakeLists.txt
proc/example/: CMakeLists.txt  README  child.cpp  parent.cpp
proc/include/: Process.hpp
proc/src/: CMakeLists.txt  Process.cpp
shmem/: CMakeLists.txt
shmem/example/: CMakeLists.txt  client.cpp
shmem/include/: SemLock.hpp  Semaphore.hpp  ShAlloc.hpp  SharedMap.hpp
shmem/src/: CMakeLists.txt  SemLock.cpp  Semaphore.cpp
tcp/: CMakeLists.txt
tcp/example/: CMakeLists.txt  README  client.cpp  server.cpp
tcp/include/: Connection.hpp  Server.hpp  Socket.hpp
tcp/src/: CMakeLists.txt  Connection.cpp  Server.cpp  Socket.cpp
