cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(Task1)
add_library(Process STATIC src/Process.cpp)
add_library(Descriptor STATIC src/Descriptor.cpp)
target_include_directories(Process PUBLIC lib)
target_include_directories(Descriptor PUBLIC lib)

add_subdirectory(example)
