cmake_minimum_required(VERSION 3.10.2)
project(shmem)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(shmem STATIC src/Semaphore.cpp src/SemLock.cpp)
target_include_directories(shmem PUBLIC include/)
add_subdirectory(example)
target_compile_options(shmem PUBLIC -Wall -Werror -Wfatal-errors)