cmake_minimum_required(VERSION 3.10.2)
project(net)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(net STATIC src/BufConnection.cpp src/EPoll.cpp src/Service.cpp)
target_include_directories(net PUBLIC include)
add_subdirectory(Task3 folder)
add_subdirectory(tests)
target_link_libraries(net tcp)